# InternetExplorer

./: .gitignore  README.md  flake.nix  pyproject.toml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: ActionDetailEntry.tsx  ActionDetails.tsx  App.tsx  BooleanSetting.tsx  ColorSchemeToggle.tsx  ConnectionStatus.tsx  History.tsx  HistoryEntry.tsx  KillSwitch.tsx  PageArea.tsx  PromptBox.tsx  Settings.tsx  index.css
frontend/src/data/: BrowseActionEntry.tsx  HistoryEntry.tsx  UserInputEntry.tsx
frontend/src/util/: WebsocketUtil.ts
internetexplorer/: ai.py  browser_control.py  config.json  main.py  server.py  server_config.json  speach_to_text.py
internetexplorer/SpeechToText/: main.py  stt.py
internetexplorer/browser_control/: ai.py  browser.py  test.py
internetexplorer/prompts/: select_actions.md
internetexplorer/server/: server.py  server_test.py
internetexplorer/speach_to_text/: main.py  stt.py
