[project]
name = "internetexplorer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" }
]
dependencies = [
    "selenium==4.*",
    "chromedriver==2.*",
    "webdriver-manager==4.*",
    "openai==1.*",
    "python-dotenv==1.*",
    "python-socketio==5.*",
    "flask==3.*",
    "bs4>=0.0.2",
    "speechrecognition>=3.10.4",
    "websockets>=13.0.1",
    "pydub>=0.25.1",
    "sounddevice>=0.5.0",
    "scipy>=1.14.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Rules are explained here: https://docs.astral.sh/ruff/rules
select = ["E4", "E7", "E9", "F", "C", "N", "A", "SIM", "PL"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["internetexplorer"]
